--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/test-utils": "^2.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.0",
     "jest": "^28.1.0",
     "jest-editor-support": "^30.0.2",
-    "vue": "^3.2.13"
+    "localforage": "^1.10.0",
+    "lodash-es": "^4.17.21",
+    "util": "^0.12.4",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
