--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@
 # 只有 VUE_ 开头的 env 变量会被导入项目逻辑中 
 
 # 源站地址
-VUE_APP_SERVER=https://www.lightnovel.app
+VUE_APP_SERVER=http://127.0.0.1
 # API服务地址
-VUE_APP_API_SERVER=https://api.lightnovel.app:45122
+VUE_APP_API_SERVER=http://127.0.0.1:18080
 # 人机检查密钥
 VUE_CAPTCHA_SITE_KEY=6LfxUnwdAAAAAKx-1uwDXCb1F9zFo80KwBA614cZ
 # token有效期，ms；当前是30s
