--- a/.env.development
+++ b/.env.development
@@ -1,33 +1,8 @@
-# Èç¹û²»ÊÇ¹²ÏíÅäÖÃ£¬ÓÃ .env.development.local ´úÌæ
+# å¦‚æžœä¸æ˜¯å…±äº«é…ç½®ï¼Œç”¨ .env.development.local ä»£æ›¿
 # https://next.cli.vuejs.org/guide/mode-and-env.html#environment-variables
 
-# API·þÎñµØÖ·
-# VUE_APP_API_SERVER=http://localhost:5000
+# APIæœåŠ¡åœ°å€
+# VUE_APP_API_SERVER=http://localhost:18080
 
-# ÊÇ·ñ´òÓ¡wsµÄ·µ»ØÐÅÏ¢
+# æ˜¯å¦æ‰“å°wsçš„è¿”å›žä¿¡æ¯
 VUE_TRACE_SERVER=1
-
-
-
-# envµÃµ½µÄÖµÈ«ÊÇ×Ö·û´®£¬ÎÞËùÎ½ÊÇ²»ÊÇnumber/stringÁË
-
-# Ö»ÓÐ VUE_ ¿ªÍ·µÄ env ±äÁ¿»á±»µ¼ÈëÏîÄ¿Âß¼­ÖÐ 
-
-# Ô´Õ¾µØÖ·
-VUE_APP_SERVER=https://www.lightnovel.app
-# API·þÎñµØÖ·
-VUE_APP_API_SERVER=https://api.lightnovel.app:45122
-# ÈË»ú¼ì²éÃÜÔ¿
-VUE_CAPTCHA_SITE_KEY=6LfxUnwdAAAAAKx-1uwDXCb1F9zFo80KwBA614cZ
-# tokenÓÐÐ§ÆÚ£¬ms£»µ±Ç°ÊÇ30s
-VUE_APP_TOKEN_EXP_TIME=30000
-# APP±êÊ¶£¬·½±ã¶àÊµÀý¹²ÏílocalhostµÈÓòÃûÊ±£¬Çø·ÖcacheÇ°×º
-VUE_APP_NAME=eBook_Shelf
-# °æ±¾ºÅVER
-# VUE_APP_VER=0x00000001
-# ÊÇ·ñ´òÓ¡wsµÄ·µ»ØÐÅÏ¢£¬Õ¼Î»
-VUE_TRACE_SERVER=
-# sessionÓÐÐ§ÆÚ£¬ms; Ä¬ÈÏ30s
-VUE_SESSION_TOKEN_VALIDITY=30000
-# ÊÇ·ñÆôÓÃ°ü·ÖÎö£¬ÉèÖÃ³É²»Îª¿Õ¼´¿ÉÆôÓÃ
-ANALYZE=
