--- a/package.json
+++ b/package.json
@@ -1,61 +1,63 @@
 {
-  "name": "vuehttpserverwebsite",
-  "version": "0.1.0",
+  "name": "quasar",
+  "version": "0.0.1",
+  "description": "A Quasar Project",
+  "productName": "Quasar App",
+  "author": "Iwctwbh <Iwctwbh@gmail.com>",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode devlopment",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .js,.ts,.vue ./",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@microsoft/signalr": "^6.0.6",
-    "@microsoft/signalr-protocol-msgpack": "^6.0.6",
-    "@vue/test-utils": "^2.0.0",
-    "core-js": "^3.8.3",
-    "element-plus": "^2.2.0",
+    "@mdi/js": "^7.0.96",
+    "@microsoft/signalr": "^6.0.7",
+    "@microsoft/signalr-protocol-msgpack": "^6.0.7",
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "dotenv": "^16.0.1",
+    "hash-js": "^1.0.3",
     "hash.js": "^1.1.7",
-    "jest": "^28.1.0",
-    "jest-editor-support": "^30.0.2",
     "localforage": "^1.10.0",
-    "lodash-es": "^4.17.21",
-    "pinia": "^2.0.14",
+    "pako": "^2.0.4",
+    "pinia": "^2.0.11",
+    "process": "^0.11.10",
+    "quasar": "^2.6.0",
+    "unplugin-auto-import": "^0.10.1",
+    "unplugin-icons": "^0.14.7",
+    "unplugin-vue-components": "^0.21.1",
     "util": "^0.12.4",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.15"
+    "vue": "^3.0.0",
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended",
-      "@vue/typescript"
-    ],
-    "parserOptions": {
-      "parser": "@typescript-eslint/parser"
-    },
-    "rules": {}
+    "@quasar/app-webpack": "^3.0.0",
+    "@types/node": "^12.20.21",
+    "@types/pako": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.5.1"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "last 10 Chrome versions",
+    "last 10 Firefox versions",
+    "last 4 Edge versions",
+    "last 7 Safari versions",
+    "last 8 Android versions",
+    "last 8 ChromeAndroid versions",
+    "last 8 FirefoxAndroid versions",
+    "last 10 iOS versions",
+    "last 5 Opera versions"
+  ],
+  "engines": {
+    "node": ">= 12.22.1",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
+  }
 }
